@@ -150,10 +150,22 @@ def getctime(filename):
     return os.stat(filename).st_ctime
 
 def exists(s):
-    """Return True if the pathname refers to an existing file or directory."""
+    """Test whether a path exists.  Returns False for broken symbolic links"""    
 
     try:
         st = os.stat(s)
+    except os.error:
+        return False
+    return True
+
+# Is `stat`/`lstat` a meaningful difference on the Mac?  This is safe in any
+# case.
+
+def lexists(path):
+    """Test whether a path exists.  Returns True for broken symbolic links"""
+
+    try:
+        st = os.lstat(path)
     except os.error:
         return False
     return True
