@@ -218,6 +218,8 @@ def exists(p):
     except swi.error:
         return 0
 
+lexists = exists
+
 
 def isdir(p):
     """
